restored web projects and commented out game projects

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link projects-link" href="#">Web</a>
                 </li>
-                <li class="nav-item">
+<!--                <li class="nav-item">
                     <a class="nav-link games-link" href="#">Games</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link resume-link" href="https://docs.google.com/document/d/1wCLno8H9xTCexQ3t6CZJjd0Wph1oc4fm0ZPM9h_z5tg/edit?usp=sharing" target="_blank">Resume</a>
                 </li>
@@ -54,7 +54,7 @@
         <a href="javascript:void(0)" class="closebtn non-nav" onclick="closeNav()">&times;</a>
         <a class="bio-link text-primary" onclick="closeNav()">Home</a>
         <a class="projects-link text-primary" onclick="closeNav()">Projects</a>
-        <a class="games-link text-primary" onclick="closeNav()">Games</a>
+        <!-- <a class="games-link text-primary" onclick="closeNav()">Games</a> -->
         <a class="resume-link text-primary" onclick="closeNav()">
             <a href="https://drive.google.com/file/d/1nFkwrIzlmb9DZfmF6leMFKa-vDkCTpbD/view?usp=sharing" target="_blank">View Resume</a>
             <a class="contact-link text-primary" onclick="closeNav()">Contact</a>
@@ -67,7 +67,7 @@
     <div class="bio">
         <div class="bio-body container-fluid text-white">
             <div class="bio-body-1">
-                <h2 class="bio__title">Web Developer Turned Software Developer</h2>
+                <h2 class="bio__title">Front End Developer</h2>
                 <img class="bio__main-image" src="img/autifkamal_trans.png" alt="Autif Kamal" />
                 <ul class="bio__summary">
                     <li>March 2023 - April 2023: Completed TrueCoders bootcamp in C# and .NET</li>
@@ -154,7 +154,7 @@
                             <img class="project-icon" src="img/react_icon.png">
                         </div>
                     </div>
-                    <!-- <div class="col-lg-5 project">
+                    <div class="col-lg-5 project">
                             <h2 class="text-white">iCare Pharmacy</h2>
                             <img class="mockup" src="img/all_sizes_icare_mockup_trans.png">
                             <div class="">
@@ -185,7 +185,7 @@
                                 <img class="project-icon" src="img/jquery_icon.png">
                                 <img class="project-icon" src="img/php_icon.png">
                             </div>
-                    </div> -->
+                    </div>
                     <div class="col-lg-5 project">
                         <h2 class="text-white">Street Fighter Quiz</h2>
                         <img class="mockup" src="img/mockup_sf.png">
@@ -210,7 +210,7 @@
         </div>
     </div>
 
-    <div class="games">
+    <!-- <div class="games">
         <div class="games-container">
             <div class="container-fluid">
                 <div class="row justify-content-center">
@@ -251,7 +251,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="resume">
         <h1>Resume</h1>
