added todo app, demo link, removed live link for yugi card app

--- a/index.html
+++ b/index.html
@@ -97,17 +97,37 @@
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-lg-5 project">
+                        <h2 class="text-white">Todo Application</h2>
+                        <img class="mockup" src="img/react_redux_todos.png">
+                        <div class="">
+                            <a href="https://dashing-lolly-791779.netlify.app/" target="_blank" class="btn-group btn-group-lg" role="group">
+                                <button type="button" class="btn btn-primary">Live</button>
+                            </a>
+                            <a href="https://github.com/kautif/todos" target="_blank" class="btn-group btn-group-lg" role="group">
+                                <button type="button" class="btn btn-primary">Repo</button>
+                            </a>
+                        </div>
+                        <p class="text-white">This is a simple React Todo application, but I also used this as an opportunity to play with Redux and TailwindCSS and so far, I'm liking them both.</p>
+                        <div class="icons">
+                            <img class="project-icon" src="img/html_icon.png">
+                            <img class="project-icon" src="img/css_icon.png">
+                            <img class="project-icon-js" src="img/js_icon.png">
+                            <img class="project-icon" src="img/react_icon.png">
+                            <img class="project-icon" src="img/tailwind.png">
+                        </div>
+                    </div>
+                    <div class="col-lg-5 project">
                         <h2 class="text-white">Yu-Gi-Oh Card Search</h2>
                         <img class="mockup" src="img/mockup_yugioh_card_search.png">
                         <div class="">
-                            <a href="https://yugiohcardsearch20230426090738.azurewebsites.net/" target="_blank" class="btn-group btn-group-lg" role="group">
-                                <button type="button" class="btn btn-primary">Live</button>
+                            <a href="https://drive.google.com/file/d/15jZDUTpaW_swFENYLPe9Wj0TzDpQ9NQQ/view?usp=drive_link" target="_blank" class="btn-group btn-group-lg" role="group">
+                                <button type="button" class="btn btn-primary">Demo</button>
                             </a>
                             <a href="https://github.com/kautif/yugioh_card_search" target="_blank" class="btn-group btn-group-lg" role="group">
                                 <button type="button" class="btn btn-primary">Repo</button>
                             </a>
                         </div>
-                        <p class="text-white">Search for Yugioh cards via YGOProdeck API and get going prices for each card according to eBay. Failed search results will return an error message and prompt another search</p>
+                        <p class="text-white">Search for Yugioh cards via YGOProdeck API and get going prices for each card according to eBay. Failed search results will return an error message and prompt another search. My Azure membership expired, so I'm afraid you can't play with it. You can only demo it and ask me questions about it</p>
                         <div class="icons">
                             <img class="project-icon" src="img/html_icon.png">
                             <img class="project-icon" src="img/css_icon.png">
